8271353: PerfDataManager::destroy crashes in VM_Exit